--- a/src/AppBundle/Resources/views/Collection/collection.html.twig
+++ b/src/AppBundle/Resources/views/Collection/collection.html.twig
@@ -39,7 +39,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-2 col-sm-offset-10 text-right">
-                    <button type="submit" class="btn btn-success btn-block">Save</button>
+                    <button type="submit" id="save-collection" class="btn btn-success btn-block">Save</button>
                 </div>
             </div>
         </form>
