--- a/src/AppBundle/Resources/views/Search/display-card-related.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-card-related.html.twig
@@ -7,7 +7,7 @@
     <div class="col-md-9">
 
         <div style="line-height:34px" id="related-header">
-					<span style="font-size:24px">Related Cards</span>
+					<span style="font-size:24px">{% trans %}Related Cards{% endtrans %}</span>
 				</div>
         <ul>
 				{% for related in card.related %}
