--- a/src/AppBundle/Resources/views/Search/display.html.twig
+++ b/src/AppBundle/Resources/views/Search/display.html.twig
@@ -18,7 +18,7 @@
 {% else %}
 
 <div class="col-sm-12" style="margin-top:10px">
-	<p class="alert alert-warning">Your query didn't match any card.</p>
+	<p class="alert alert-warning">{% trans %}Your query didn't match any card.{% endtrans %}</p>
 </div>
 	
 {% endif %}
