fixes broken markup.

--- a/src/AppBundle/Resources/views/User/profile_edit.html.twig
+++ b/src/AppBundle/Resources/views/User/profile_edit.html.twig
@@ -20,12 +20,12 @@
   </div>
 
   <div class="form-group">
-    <label for="username">{% trans %}Username{% endtrans %}label>
+    <label for="username">{% trans %}Username{% endtrans %}</label>
     <input type="text" name="username" id="username" value="{{ user.username }}" class="form-control">
   </div>
 
   <div class="form-group">
-    <label for="email">{% trans %}Email{% endtrans %}label>
+    <label for="email">{% trans %}Email{% endtrans %}</label>
     <input type="text" name="email" id="email" value="{{ user.email }}" class="form-control">
   </div>
 
