updated changes page

--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -97,6 +97,11 @@
 <h3>Recent Updates</h3>
 <ul>
 	<li>
+		<h4>Taboos</h4> 
+		Can now set your deck to use the Taboo List, this will show XP and other card changes to help build your deck. 
+		Selecting the Taboo List as default is coming soon.
+	</li>
+	<li>
 		<h4>Campaign Rewards</h4> 
 		If a campaign lets you add a regular player card that does not count towards your deck limit, you can do so by opening the card popup 
 		and manually adjust how many of that card ignore your deck limit.
