added icons to card list

--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -22,10 +22,11 @@
 				<li><a href="#" onclick="app.deck.change_sort('xp')" id="btn-sort-faction">by XP</a></li>
 				<li><a href="#" onclick="app.deck.change_sort('cost')" id="btn-sort-faction">by Cost</a></li>
 			</ul>
-		</div>    
-    <div class="btn-group">
-		<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">Pack Filter <span class="caret"></span></button>
-		<ul class="dropdown-menu pull-right" data-filter="pack_code" title="Shift+Click to select only one option ; Alt+Shift+Click to select all other options"></ul>
+		</div>
+
+		<div class="btn-group">
+			<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">Pack Filter <span class="caret"></span></button>
+			<ul class="dropdown-menu pull-right" data-filter="pack_code" title="Shift+Click to select only one option ; Alt+Shift+Click to select all other options"></ul>
 		</div>
 		<div class="btn-group">
 			<div class="dropdown dropdown-btn">
@@ -84,7 +85,7 @@
 				<tr>
 					<th style="min-width:85px"><a href="#" data-sort="indeck">Quantity</a></th>
 					<th><a href="#" data-sort="name">Name</a></th>
-					<th class="xp"><a href="#" data-sort="xp" title="XP">XP</a></th>		
+					<th class="xp"><a href="#" data-sort="xp" title="Level">Level</a></th>		
 					<th class="cost"><a href="#" data-sort="cost" title="Cost">Cost</a></th>					
 					<th class="type"><a href="#" data-sort="type_code" title="Type">Type</a></th>
 					<th class="faction"><a href="#" data-sort="faction_code" title="Faction">Class</a></th>
