--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -59,6 +59,10 @@
 	
 	<!-- Search Bar -->
 	<div id="player-cards-filters">
+	
+	<div class="col-sm-12">
+		<select class="form-control" data-filter="faction_selector" style="display: none;"></select>
+	</div>
 	<div class="col-sm-12" style="margin-bottom:10px">
       <div class="btn-group btn-group-justified" data-filter="faction_code" data-toggle="buttons"></div>
 	</div>
