Add haunted rule

--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -107,6 +107,7 @@
 	<li><a href="#Gains">Gains</a></li>
 	<li><a href="#Game">Game</a></li>
 	<li><a href="#Hand_Size">Hand Size</a></li>
+	<li><a href="#Haunted">Haunted</a></li>
 	<li><a href="#Heal">Heal</a></li>
 	<li><a href="#Health_and_Damage">Health and Damage</a></li>
 	<li><a href="#Hidden">Hidden</a></li>
@@ -1214,6 +1215,11 @@
 <p>See "<a href="#Upkeep_Phase">IV. Upkeep phase</a>" on page 25.</p>
 
 <h2 id="Heal">Heal</h2>
+
+<h2 id="Haunted" style="color:red">Haunted (added in <em>The Circle Undone</em>)</h2>
+
+<p>Haunted is a new ability that appears on some locations. Each time an investigator fails a skill test while investigating a location, after applying all results for that skill test, that investigator must resolve all “<em>Haunted</em> –” abilities on that location.
+A location is “haunted” for the purposes of other card effects if it has at least one “<em>Haunted</em> –” ability (printed or otherwise).</p>
 
 <p>"Heal" is an instruction to remove the indicated amount of damage or the indicated amount of horror from a card.</p>
 
