--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -100,6 +100,7 @@
 	<li><a href="#Exhaust">Exhaust, Exhausted</a></li>
 	<li><a href="#Exile">Exile</a></li>
 	<li><a href="#Experience">Experience</a></li>
+	<li><a href="#Explore">Explore</a></li>
 	<li><a href="#Fast">Fast</a></li>
 	<li><a href="#Fight_Action">Fight Action</a></li>
 	<li><a href="#Flavor_Text">Flavor Text</a></li>
@@ -134,6 +135,7 @@
 	<li><a href="#Move_Action">Move Action</a></li>
 	<li><a href="#Mulligan">Mulligan</a></li>
 	<li><a href="#Must">Must</a></li>
+	<li><a href="#Myriad">Myriad</a></li>
 	<li><a href="#Mythos_Phase">Mythos Phase</a></li>
 	<li><a href="#Nearest">Nearest</a></li>
 	<li><a href="#Nested_Sequences">Nested Sequences</a></li>
@@ -173,8 +175,10 @@
 	<li><a href="#Standalone_Mode">Standalone Mode</a></li>
 	<li><a href="#Supplies">Supplies</a></li>
 	<li><a href="#Surge">Surge</a></li>
+	<li><a href="#Swarm">Swarm</a></li>
 	<li><a href="#Taking_Damage_Horror">Taking Damage/Horror</a></li>
 	<li><a href="#Target">Target</a></li>
+	<li><a href="#Tarot Slot">Tarot Slot</a></li>
 	<li><a href="#Then">Then</a></li>
 	<li><a href="#Threat_Area">Threat Area</a></li>
 	<li><a href="#Tokens">Tokens, Running out of</a></li>
@@ -398,7 +402,7 @@
 
 <li>  If an investigator is instructed to lose 1 or more actions, he or she has that many fewer actions to take during that round.</li>
 
-<li>  Ruling from Matthew Newman regarding losing additional actions: If you are instructed to lose 1 or more actions, you have that many fewer actions to take during your turn. This is referring to your normal three \"full\" actions. So if you are instructed to lose 1 or more actions, those must be the ones that are lost first. If you have no more of those actions to lose, then you start losing \"additional\" actions, of your choice.</li>
+<li>  Ruling from Matthew Newman regarding losing additional actions: If you are instructed to lose 1 or more actions, you have that many fewer actions to take during your turn. This is referring to your normal three "full" actions. So if you are instructed to lose 1 or more actions, those must be the ones that are lost first. If you have no more of those actions to lose, then you start losing "additional" actions, of your choice.</li>
 
 </ul>
 
@@ -1130,7 +1134,7 @@
 
 <li>  A card with the exceptional keyword costs twice its printed experience cost to purchase.</li>
 
-<li>   A player's investigator deck cannot include more than 1 copy (by title) of any given exceptional card.</li>
+<li>  A player's investigator deck cannot include more than 1 copy (by title) of any given exceptional card.</li>
 
 </ul>
 
@@ -1151,6 +1155,26 @@
 <h2>Experience</h2>
 
 <p>See "<a href="#Experience">Campaign Play</a>" on page 5.</p>
+
+<h2 id="Explore" style="color:red">Explore (added in <em>The Forgotten Age</em>)</h2>
+
+<p>Some abilities in this campaign (and others) are identified with an "Explore" action designator. Such abilities are generally used to find new locations to put into play, and are initiated using the "activate" action.</p>
+
+<p>"Explore" abilities instruct you to draw the top card of the "exploration deck," which is a separate deck that is constructed during the setup of some scenarios. This deck consists of several single-sided locations and treachery cards.</p>
+
+<ul>
+
+<li> Each "Explore" ability indicates a particular type of location that you are seeking to draw. <b>If a location of that type is drawn, it is put into play, and you move to that location.</b> This is considered a "successful" exploration. 
+
+<li> If any other location is drawn, place it next to the exploration deck, and draw the next card from the exploration deck. Repeat this process until a location of the indicated type is drawn, or a treachery is drawn. After this action has ended, shuffle each location next to the exploration deck back into the exploration deck. 
+
+<li> If a treachery card is drawn, it is resolved as normal. If it is discarded, place it in the encounter discard pile as you would normally. There is no discard pile for the exploration deck. This is considered an "unsuccessful" exploration.
+
+<li> As a single-sided location is put into play from the exploration deck, place clues on that location equal to its clue value.
+
+</ul>
+
+<p><i>Example: Agenda 1a — “Expedition into the Wild” has the following ability: “[action]: <b>Explore.</b> Draw the top card of the exploration deck. If it is a connecting location, put it into play and move to it.” Ursula Downs is at the Expedition Camp and wishes to find a new location to travel to. She spends her first action to explore, drawing the top card of the exploration deck. The card she draws is Circuitous Trail. Because Circuitous Trail is a location that is not connected to the Expedition Camp, it is placed next to the exploration deck, and Ursula draws the next card in the exploration deck. This time, she draws the Low on Supplies treachery card, which she resolves as normal and places in the encounter discard pile. Her exploration is unsuccessful, and she must shuffle the Circuitous Trail that she drew previously back into the exploration deck. Ursula decides to explore one more time, spending a second action. This time, she draws Path of Thorns, which is connected to the Expedition Camp. Her exploration is successful. Path of Thorns is put into play with clues on it equal to its clue value, and Ursula immediately moves from the Expedition Camp to the Path of Thorns.</i></p>
 
 <h2 id="Fast">Fast</h2>
 
@@ -1216,11 +1240,6 @@
 
 <h2 id="Heal">Heal</h2>
 
-<h2 id="Haunted" style="color:red">Haunted (added in <em>The Circle Undone</em>)</h2>
-
-<p>Haunted is a new ability that appears on some locations. Each time an investigator fails a skill test while investigating a location, after applying all results for that skill test, that investigator must resolve all “<em>Haunted</em> –” abilities on that location.
-A location is “haunted” for the purposes of other card effects if it has at least one “<em>Haunted</em> –” ability (printed or otherwise).</p>
-
 <p>"Heal" is an instruction to remove the indicated amount of damage or the indicated amount of horror from a card.</p>
 
 <ul>
@@ -1228,6 +1247,12 @@ A location is “haunted” for the purposes of other card effects if it has at 
 <li>  If a card is healed for more damage or horror than it currently has on it, remove as much of the indicated amount as possible.
 
 </ul>
+
+<h2 id="Haunted" style="color:red">Haunted (added in <em>The Circle Undone</em>)</h2>
+
+<p>Haunted is a new ability that appears on some locations. Each time an investigator fails a skill test while investigating a location, after applying all results for that skill test, that investigator must resolve all “<b>Haunted</b> –” abilities on that location.</p>
+
+<p>A location is “haunted” for the purposes of other card effects if it has at least one “<b>Haunted</b> –” ability (printed or otherwise).</p>
 
 <h2 id="Health_and_Damage">Health and Damage</h2>
 
@@ -1255,7 +1280,7 @@ A location is “haunted” for the purposes of other card effects if it has at 
 
 <h2 id="Hidden" style="color:red">Hidden (added in <em>The Path to Carcosa</em>)</h2>
 
-<p>Some encounter cards in <em>The Path to Carcosa</em> campaign have the /"hidden/" keyword. Hidden cards have <b>Revelation</b> abilities that secretly add them to your hand. This should be done without revealing that card or its text to the other investigators. While a hidden card is in your hand, treat it as if it were in your threat area. Its Constant abilities are active, and abilities on it can be triggered, but only by you. A hidden card counts toward your hand size, but it cannot be discarded from your hand by <i>any</i> means except those described on the card. When discarded, hidden cards are placed in the encounter discard pile. They do not remain a part of your deck like weaknesses do. For the best experience, players are encouraged to stay /"in character/" and not share information about hidden cards in their hand.</p>
+<p>Some encounter cards in <em>The Path to Carcosa</em> campaign have the "hidden" keyword. Hidden cards have <b>Revelation</b> abilities that secretly add them to your hand. This should be done without revealing that card or its text to the other investigators. While a hidden card is in your hand, treat it as if it were in your threat area. Its Constant abilities are active, and abilities on it can be triggered, but only by you. A hidden card counts toward your hand size, but it cannot be discarded from your hand by <i>any</i> means except those described on the card. When discarded, hidden cards are placed in the encounter discard pile. They do not remain a part of your deck like weaknesses do. For the best experience, players are encouraged to stay "in character" and not share information about hidden cards in their hand.</p>
 
 <h2 id="Hunter">Hunter</h2>
 
@@ -1546,6 +1571,10 @@ A location is “haunted” for the purposes of other card effects if it has at 
 <li>  In the absence of the word "must" while choosing among multiple options, any option may be chosen upon the resolution of the effect – even an option that does not change the game state.</li>
 
 </ul>
+
+<h2 id="Myriad" style="color:red">Myriad (added in <em>The Dream-Eaters</em>)</h2>
+
+<p>Myriad is a new keyword added in The Dream-Eaters, coming soon. This is placeholder rules text.</p>
 
 <h2>Mythos Phase</h2>
 
@@ -2001,6 +2030,10 @@ A player cannot include 50 or more experience worth of cards in a standalone dec
 
 </ul>
 
+<h2 id="Swarm" style="color:red">Swarm (added in <em>The Dream-Eaters</em>)</h2>
+
+<p>Swarm is a new keyword added in The Dream-Eaters, coming soon. This is placeholder rules text.</p>
+
 <h2 id="Taking_Damage_Horror">Taking Damage/Horror</h2>
 
 <p>"Take X damage" is shorthand for "deal X damage to your investigator." "Take X horror" is shorthand for "deal X horror to your investigator."</p>
@@ -2022,6 +2055,16 @@ A player cannot include 50 or more experience worth of cards in a standalone dec
 <li>  A card is not an eligible target for an ability if the resolution of that ability's effect could not change the target's state. <em>(For example, an exhausted enemy could not be chosen as the target of an effect that reads, "choose and exhaust an enemy.")</em></li>
 
 </ul>
+
+<h2 id="Tarot Slot" style="color:red">Tarot Slot (added in <em>The Circle Undone</em>)</h2>
+
+<p>Tarot slots are a new type of asset slot introduced in this expansion. The following symbol indicates that an asset fills a tarot slot: </p>
+
+<p>As with other slots, tarot slots limit the number of asset cards of that slot type an investigator is permitted to have in play simultaneously.</p>
+
+<p><b>By default, an investigator has only one tarot slot available.</b></p>
+
+<p>All other rules governing slots apply to tarot slots, as usual.</p>
 
 <h2 id="Then">Then</h2>
 
