--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -1574,7 +1574,7 @@
 
 <h2 id="Myriad" style="color:red">Myriad (added in <em>The Dream-Eaters</em>)</h2>
 
-<p>Myriad is a new keyword added in The Dream-Eaters, coming soon. This is placeholder rules text.</p>
+<p>An investigator may include up to three copies of a player card with the myriad keyword in their deck (by title), instead of the normal limit of two copies. Additionally, when you purchase a myriad card for your deck, you may purchase up to two additional copies of that card (at the same level) at no experience cost.</p>
 
 <h2>Mythos Phase</h2>
 
