Add support for mandy deck_size_select building

--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -61,6 +61,9 @@
 	<div id="player-cards-filters">
 	
 	<div class="col-sm-12">
+		<select class="form-control" data-filter="deck_size_selector" style="display: none;"></select>
+	</div>
+	<div class="col-sm-12">
 		<select class="form-control" data-filter="faction_selector" style="display: none;"></select>
 	</div>
 	<div class="col-sm-12" style="margin-bottom:10px">
