--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -175,7 +175,7 @@
 	<li><a href="#Standalone_Mode">Standalone Mode</a></li>
 	<li><a href="#Supplies">Supplies</a></li>
 	<li><a href="#Surge">Surge</a></li>
-	<li><a href="#Swarm">Swarm</a></li>
+	<li><a href="#Swarming X">Swarming X</a></li>
 	<li><a href="#Taking_Damage_Horror">Taking Damage/Horror</a></li>
 	<li><a href="#Target">Target</a></li>
 	<li><a href="#Tarot Slot">Tarot Slot</a></li>
@@ -2030,9 +2030,25 @@ A player cannot include 50 or more experience worth of cards in a standalone dec
 
 </ul>
 
-<h2 id="Swarm" style="color:red">Swarm (added in <em>The Dream-Eaters</em>)</h2>
+<h2 id="Swarming X" style="color:red">Swarming X (added in <em>The Dream-Eaters</em>)</h2>
 
-<p>Swarm is a new keyword added in The Dream-Eaters, coming soon. This is placeholder rules text.</p>
+<p>An enemy with the swarming X keyword is actually a pack of enemies operating in unison. After you put any enemy with the swarming X keyword into play, place the top X cards of your deck facedown underneath the enemy as swarm cards, without looking at them. The enemy they are underneath is called the "host enemy." Some scenario card effects may also instruct a player to add swarm cards to an enemy. This is done using the same process.</p>
+
+<ul>
+
+<li>If it is ever unclear which investigator should add swarm cards, the lead investigator does so.</li>
+
+<li>Each swarm card underneath the host enemy acts as a separate instance of that enemy for most purposes. Each swarm card has the same values and text as its host card. <i>(For example, if an investigator is engaged with a host enemy with 2 swarm cards underneath it, that investigator is engaged with 3 enemies in total.)</i></li>
+
+<li>Each swarm card attacks separately when enemies attack during the enemy phase. Once the host enemy and all of its swarm cards have attacked during this step, exhaust all of them.</li>
+
+<li>Each swarm card can be attacked or dealt damage separately, but the host enemy cannot be defeated while it still has swarm cards underneath it. When a swarm card is defeated, any excess damage may be dealt to another swarm card underneath the same host enemy or to the host enemy itself. <i>(For example, Tony Morgan uses a .41 Derringer to attack a Stealthy Zoog with 2 swarm cards. The attack deals 2 damage. The first point of damage defeats 1 of the 2 swarm cards, so the excess point of damage may be dealt to another swarm card, defeating it as well.)</i></li>
+
+<li>Anytime a swarm card leaves play, place it on the bottom of its owner's deck. If you are unsure of the owner of the swarm card, you may look at it to determine its owner.</li>
+
+<li>The host enemy and all of its swarm cards move, engage, and exhaust as a single entity. <i>(For example, if a host enemy or any of its swarm cards are evaded, all of them exhaust and become disengaged.)</i></li>
+
+</ul>
 
 <h2 id="Taking_Damage_Horror">Taking Damage/Horror</h2>
 
