--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -50,6 +50,7 @@
 	<li><a href="#Base_Value">Base Value</a></li>
 	<li><a href="#Bearer">Bearer</a></li>
 	<li><a href="#Blank">Blank</a></li>
+	<li><a href="#Bonded">Bonded</a></li>
 	<li><a href="#Campaign_Play">Campaign Play</a></li>
 		<ul>
 		<li><a href="#Experience">Experience</a></li>
@@ -559,6 +560,16 @@
 <li>  A card's text box includes: traits, keywords, card text and abilities.</li>
 
 </ul>
+
+<h2 id="Bonded">Bonded</h2>
+
+<p>Cards with the bonded keyword are linked to another player card. They have no level and therefore are not available as deckbuilding options. Instead, the card to which they are bonded (which is listed in parentheses next to this keyword) brings the bonded card into the game.</p>
+
+<p>If your deck contains a card that summons one or more bonded cards, those bonded cards are set aside at the start of each game.</p>
+
+<p>If a weakness with the bonded keyword is added to an investigator's deck, hand, threat area, or play area, it does not remain a part of that investigator's deck for the rest of the campaign (unlike other weaknesses). It starts each game set aside with that investigator's other bonded cards.</p>
+
+<p><i>For example: Hope, Zeal, and Augur all have the "bonded (Miss Doyle)" keyword. This means each of those cards is bonded to the card Miss Doyle. Hope, Zeal, and Augur each have no level and are therefore not available as options to include when building your deck. However, Miss Doyle summons each of these cards when she is played. Therefore, a player with Miss Doyle in their deck should set aside Hope, Zeal, and Augur at the start of each game. These cards are not part of that investigator's deck and do not count towards their deck size.</i></p>
 
 <h2 id="Campaign_Play">Campaign Play</h2>
 
