update readme and fix images on faqs

--- a/src/AppBundle/Resources/views/Reviews/faqs.html.twig
+++ b/src/AppBundle/Resources/views/Reviews/faqs.html.twig
@@ -43,7 +43,7 @@
 		<article class="review" data-id="{{ review.id }}" id="review-{{ review.id }}">
 			<div>
 				<div style="overflow: hidden;" class="pull-left card-thumbnail-static card-thumbnail-2x card-thumbnail-{{review.card.type.getCode()}}">
-					<img src="/web/bundles/cards/{{ review.card.code }}.jpg" alt="{{ review.card.name }}" class="card-img-thumbnail card-img-thumbnail-{{review.card.type.getCode()}}" style="" onerror="this.onerror=null;this.src='/web/bundles/cards/{{ review.card.code }}.png';">
+					<img src="/bundles/cards/{{ review.card.code }}.jpg" alt="{{ review.card.name }}" class="card-img-thumbnail card-img-thumbnail-{{review.card.type.getCode()}}" style="" onerror="this.onerror=null;this.src='/bundles/cards/{{ review.card.code }}.png';">
 				</div>
 				<div style="margin-left : 90px;">
 					<div class="review-text2">
