--- a/src/AppBundle/Resources/views/Reviews/reviews.html.twig
+++ b/src/AppBundle/Resources/views/Reviews/reviews.html.twig
@@ -48,7 +48,7 @@
 			</div>
 			<div class="review-content">
 				<div class="review-text2">
-					<img src="/web/bundles/cards/{{ review.card.code }}.jpg" alt="{{ review.card.name }}" class="pull-right" style="width:120px;margin:0 0 10px 10px" onerror="this.onerror=null;this.src='/web/bundles/cards/{{ review.card.code }}.png';">
+					<img src="/bundles/cards/{{ review.card.code }}.jpg" alt="{{ review.card.name }}" class="pull-right" style="width:120px;margin:0 0 10px 10px" onerror="this.onerror=null;this.src='/bundles/cards/{{ review.card.code }}.png';">
 					{{ review.textHtml|raw }}
 				</div>
 				<div class="review-date">
