--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -70,7 +70,11 @@
             
             <!-- locale selection -->
 
-            {% if _route is not defined or _route is not empty %}
+            {% if _route is not defined or _route is not empty or app.request.attributes.get('_route') is not empty %}
+            {% set _route = app.request.attributes.get('_route') %}
+            {% set _route_params = app.request.attributes.get('_route_params')|default({})|merge(app.request.query.all) %}
+            {% set _get_params = app.request.attributes.get('_get_params')|default({}) %}
+            {% if _route is defined and _route is not empty %}
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown">
                 <span class="lang-sm" lang="{{ app.request.locale | default(default_locale) }}"></span>
@@ -78,9 +82,6 @@
               </a>
               <ul class="dropdown-menu">
                 {% for supported_locale in supported_locales %}
-                  {% set _route = app.request.attributes.get('_route') %}
-                  {% set _route_params = app.request.attributes.get('_route_params')|default({})|merge(app.request.query.all) %}
-                  {% set _get_params = app.request.attributes.get('_get_params')|default({}) %}
                   <li>
                     <a href="{{ path(_route, _route_params|merge(_get_params)|merge({'_locale': supported_locale})) }}">
                       <span lang="{{ supported_locale }}" class="lang-sm lang-lbl lang-lbl-full"></span>
@@ -89,6 +90,7 @@
                 {% endfor %}
               </ul>
             </li>
+            {% endif %}
             {% endif %}
             
             <li id="login">
